[package]
name = "x509-parser"
version = "0.14.0"
description = "Parser for the X.509 v3 format (RFC 5280 certificates)"
license = "MIT/Apache-2.0"
keywords = ["X509","Certificate","parser","nom"]
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
homepage = "https://github.com/rusticata/x509-parser"
repository = "https://github.com/rusticata/x509-parser.git"
categories = ["parser-implementations", "cryptography"]
readme = "README.md"
edition = "2018"

include = [
  "CHANGELOG.md",
  "LICENSE-*",
  "README.md",
  ".gitignore",
  ".travis.yml",
  "Cargo.toml",
  "src/*.rs",
  "src/extensions/*.rs",
  "src/validate/*.rs",
  "tests/*.rs",
  "assets/*.crl",
  "assets/*.csr",
  "assets/*.der",
  "assets/*.pem",
  "assets/crl-ext/*.der",
  "examples/*.rs"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
verify = ["ring"]
validate = []

[dependencies]
asn1-rs = { version = "0.5", features=["datetime"] }
base64 = "0.13"
data-encoding = "2.2.1"
lazy_static = "1.4"
nom = "7.0"
oid-registry = { version = "0.6", features = ["crypto", "x509", "x962"] }
rusticata-macros = "4.0"
der-parser = { version = "8.1.0", features = ["bigint"] }
thiserror = "1.0.2"

[dependencies.ring]
git = "https://github.com/briansmith/ring.git"
rev = "0f3bf003"
# requires the latest version to have Ed25519 support on WASM
features = ["wasm32_unknown_unknown_js"]
optional = true

[target.'cfg(target_family = "wasm")'.dependencies.chrono]
version = "=0.4.22"
features = ["wasmbind", "std", "clock"]
default-features = false

[target.'cfg(not(target_family = "wasm"))'.dependencies.chrono]
version = "=0.4.22"
default-features = false
features = ["std", "clock"]

[dev-dependencies]
x509-parser = { path = ".", features = ["verify"] }
wasm-bindgen-test = "0.3"
